<resources>
    <string name="app_name">Budget Buddy</string>
    <string name="title_home">Home</string>
    <string name="title_transaction">Add Transaction</string>
    <string name="title_summary">View Summary</string>
    <string name="transaction_type_text">Select transaction type:</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="transaction_category_text">Enter transaction category:</string>
    <string name="transaction_amount_text">Enter transaction amount:</string>
    <string name="transaction_category_hint">Transaction category</string>
    <string name="transaction_amount_hint">Transaction amount</string>
    <string name="transaction_date_text">Select transaction date:</string>
    <string name="select_date_button_text">Select Date</string>
    <string name="transaction_button_text">Add Transaction</string>
    <string name="select_date_reset_text">Select Date</string>
    <string name="type">Type</string>
    <string name="category">Category</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="transaction_header">Add Transaction</string>
    <string name="edit_transaction_header">Edit Transaction</string>
    <string name="change_transaction_btn_text">Change Transaction</string>
    <string name="transaction_history_heading">Transaction History</string>
    <string name="greeting_help">Stay on track, save more!</string>
    <string name="good_morning_text">Good Morning</string>
    <string name="good_afternoon_text">Good Afternoon</string>
    <string name="good_evening_text">Good Evening</string>
    <string name="good_night_text">Good Night</string>
    <string name="app_logo_image">App Logo</string>
    <string name="pie_chart_no_data_text">No financial data available</string>
    <string name="pie_chart_label">Financial Data</string>
    <string name="table_column_type">Type</string>
    <string name="table_column_category">Category</string>
    <string name="table_column_amount">Amount</string>
    <string name="table_column_date">Date</string>
    <string name="pie_chart_header">Total Income/ Expense</string>
    <string name="bar_graph_header">Net Income/ Expense</string>
    <string name="save_to_pdf_button_text">Save to PDF</string>
    <string name="search_btn_text">Search</string>
    <string name="edit_year_text">Enter year</string>
    <string name="enter_year_text">Enter year:</string>
    <string name="edit_month_text">Enter month</string>
    <string name="enter_month_text">Enter month</string>
    <string name="edit_date_text">Enter date</string>
    <string name="enter_date_text">Enter date:</string>
    <string name="splash_app_logo_image">Splash app logo</string>
    <string name="splash_credit_from">Created By</string>
    <string name="splash_creator_name">Hirumitha Kuladewa</string>
</resources>