<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:layout_width="@dimen/_150dp"
        android:layout_height="@dimen/_150dp"
        android:id="@+id/splash_logo"
        android:layout_centerInParent="true"
        android:src="@drawable/app_icon"
        android:contentDescription="@string/splash_app_logo_image" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_25dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/create_id"
            android:text="@string/splash_credit_from"
            android:textColor="@color/text_hint_color"
            android:textSize="@dimen/_16sp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/creator"
            android:text="@string/splash_creator_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_8dp"/>

    </LinearLayout>

</RelativeLayout>