<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_15dp"
    tools:context=".fragments.summary.SummaryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="5dp"
            app:cardCornerRadius="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/card_color"
                android:padding="@dimen/_15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_date"
                    android:text="@string/enter_date_text"
                    android:textSize="@dimen/_18sp"
                    android:textColor="@color/black"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_text_day"
                    android:layout_below="@id/text_date"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/edit_date_text"
                    android:textColorHint="@color/text_hint_color"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:inputType="number"
                    android:padding="@dimen/_15dp"
                    android:layout_marginTop="@dimen/_5dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:importantForAutofill="no"
                    tools:ignore="VisualLintTextFieldSize"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_month"
                    android:layout_below="@id/edit_text_day"
                    android:text="@string/enter_month_text"
                    android:textSize="@dimen/_18sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="@dimen/_10dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_text_month"
                    android:layout_below="@id/text_month"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/edit_month_text"
                    android:textColorHint="@color/text_hint_color"
                    android:textSize="@dimen/_16sp"
                    android:textColor="@color/black"
                    android:inputType="number"
                    android:padding="@dimen/_15dp"
                    android:layout_marginTop="@dimen/_5dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:importantForAutofill="no"
                    tools:ignore="VisualLintTextFieldSize"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_year"
                    android:layout_below="@id/edit_text_month"
                    android:text="@string/enter_year_text"
                    android:textSize="@dimen/_18sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="@dimen/_10dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_text_year"
                    android:layout_below="@id/text_year"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/edit_year_text"
                    android:textSize="@dimen/_16sp"
                    android:textColorHint="@color/text_hint_color"
                    android:textColor="@color/black"
                    android:inputType="number"
                    android:padding="@dimen/_15dp"
                    android:layout_marginTop="@dimen/_5dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:importantForAutofill="no"
                    tools:ignore="VisualLintTextFieldSize"/>

                <TextView
                    android:layout_width="@dimen/_200dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/search_btn"
                    android:layout_below="@id/edit_text_year"
                    android:background="@drawable/button_background"
                    android:text="@string/search_btn_text"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/_16sp"
                    android:gravity="center"
                    android:layout_centerHorizontal="true"
                    android:padding="@dimen/_15dp"
                    android:layout_marginTop="@dimen/_25dp"
                    android:clickable="true"
                    android:focusable="true"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15dp"
            app:cardElevation="@dimen/_5dp"
            app:cardCornerRadius="@dimen/_10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_15dp"
                android:background="@color/card_color">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/summary_text"
                    android:textSize="@dimen/_16sp"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15dp"
            app:cardElevation="@dimen/_5dp"
            app:cardCornerRadius="@dimen/_10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/card_color">

                <com.github.mikephil.charting.charts.BarChart
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_250dp"
                    android:id="@+id/bar_graph"
                    android:layout_margin="15dp"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="?actionBarSize">

            <TextView
                android:layout_width="@dimen/_200dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_save_pdf"
                android:background="@drawable/button_background"
                android:text="@string/save_to_pdf_button_text"
                android:textSize="@dimen/_16sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:padding="@dimen/_15dp"
                android:layout_marginTop="@dimen/_15dp"
                android:clickable="true"
                android:focusable="true"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>