<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/action_bar"
            app:cardCornerRadius="@dimen/_10dp"
            app:cardElevation="@dimen/_5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/card_color"
                android:padding="@dimen/_15dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/greetings_linear"
                        android:orientation="vertical"
                        tools:ignore="RelativeOverlap">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/greeting_changer"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_18sp"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_1dp"
                            android:background="@color/black"
                            android:layout_marginTop="@dimen/_5dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/greeting_help"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_16sp"
                            android:layout_marginTop="@dimen/_5dp" />

                    </LinearLayout>

                    <ImageView
                        android:layout_width="@dimen/_50dp"
                        android:layout_height="@dimen/_50dp"
                        android:id="@+id/app_logo"
                        android:src="@drawable/app_icon"
                        android:contentDescription="@string/app_logo_image"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"/>

                </RelativeLayout>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pie_chart_card"
            android:layout_below="@id/action_bar"
            android:layout_marginTop="@dimen/_15dp"
            app:cardCornerRadius="@dimen/_10dp"
            app:cardElevation="@dimen/_5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/card_color"
                android:padding="@dimen/_15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pie_chart_header"
                    android:text="@string/pie_chart_header"
                    android:textSize="@dimen/_20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"/>

                <com.github.mikephil.charting.charts.PieChart
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_250dp"
                    android:id="@+id/pie_chart"
                    android:layout_below="@id/pie_chart_header"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_10dp"
                    android:padding="@dimen/_15dp"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/table_card"
            android:layout_below="@id/pie_chart_card"
            android:layout_marginTop="@dimen/_15dp"
            app:cardCornerRadius="@dimen/_10dp"
            app:cardElevation="@dimen/_5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/card_color"
                android:padding="@dimen/_15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/table_title"
                    android:text="@string/transaction_history_heading"
                    android:textSize="@dimen/_20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/transaction_table_view"
                    android:layout_below="@id/table_title"
                    android:layout_marginTop="@dimen/_10dp"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bar_graph_card"
            android:layout_below="@id/table_card"
            android:layout_marginTop="@dimen/_15dp"
            app:cardCornerRadius="@dimen/_10dp"
            app:cardElevation="@dimen/_5dp"
            android:layout_marginBottom="?android:actionBarSize">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/card_color"
                android:padding="@dimen/_15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bar_graph_header"
                    android:text="@string/bar_graph_header"
                    android:textSize="@dimen/_20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"/>

                <com.github.mikephil.charting.charts.BarChart
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_250dp"
                    android:id="@+id/bar_chart"
                    android:layout_below="@id/bar_graph_header"
                    android:layout_marginTop="@dimen/_10dp"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</ScrollView>